--- a/package.json
+++ b/package.json
@@ -5,19 +5,30 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
     "next": "~15.1.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^2.1.1",
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "20.4.6",
     "@nx/eslint-plugin": "20.4.6",
     "@nx/jest": "20.4.6",
     "@nx/js": "20.4.6",
+    "@nx/nest": "20.4.6",
     "@nx/next": "20.4.6",
+    "@nx/node": "20.4.6",
+    "@nx/web": "20.4.6",
+    "@nx/webpack": "20.4.6",
     "@nx/workspace": "20.4.6",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -39,10 +50,12 @@
     "jest-environment-jsdom": "^29.7.0",
     "nx": "20.4.6",
     "prettier": "^2.6.2",
+    "prisma": "^6.4.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0"
+    "typescript-eslint": "^8.19.0",
+    "webpack-cli": "^5.1.4"
   }
 }
