--- a/package.json
+++ b/package.json
@@ -4,19 +4,26 @@
   "license": "MIT",
   "scripts": {
     "dev": "nx run-many --target=serve --projects=frontend,backend --parallel=2",
+    "prisma:push": "cd shared/internal/src/database && prisma db push",
     "prisma:generate": "cd shared/internal/src/database && prisma generate"
   },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^11.0.6",
     "@nx/react": "^20.4.6",
     "@prisma/client": "^6.4.1",
+    "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
+    "jsonwebtoken": "^9.0.2",
     "next": "~15.1.4",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -40,11 +47,14 @@
     "@nx/webpack": "20.4.6",
     "@nx/workspace": "20.4.6",
     "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "16.1.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "18.16.9",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
