--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@testing-library/react": "16.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "18.16.9",
