--- a/apps/frontend/project.json
+++ b/apps/frontend/project.json
@@ -16,11 +16,13 @@
       "configurations": {
         "development": {
           "buildTarget": "frontend:build:development",
-          "dev": true
+          "dev": true,
+          "port": 3000
         },
         "production": {
           "buildTarget": "frontend:build:production",
-          "dev": false
+          "dev": false,
+          "port": 3000
         }
       }
     }
