--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
+    "framer-motion": "^12.4.10",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.477.0",
     "next": "~15.1.4",
