--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nx run-many --target=serve --projects=frontend,backend --parallel=2",
-    "prisma:push": "cd shared/internal/src/database && prisma db push",
-    "prisma:generate": "cd shared/internal/src/database && prisma generate"
+    "prisma:push": "cd shared/internal/src && prisma db push",
+    "prisma:generate": "cd shared/internal/src && prisma generate"
   },
   "private": true,
   "dependencies": {
@@ -37,8 +37,11 @@
     "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
     "framer-motion": "^12.4.10",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^146.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.477.0",
+    "mime-types": "^2.1.35",
     "next": "~15.1.4",
     "next-themes": "^0.4.4",
     "passport": "^0.7.0",
@@ -81,6 +84,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "18.16.9",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
