--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/postcss": "^4.0.11",
+    "@tanstack/react-table": "^8.21.2",
     "bcrypt": "^5.1.1",
+    "byte-size": "^9.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.10",
     "google-auth-library": "^9.15.1",
     "googleapis": "^146.0.0",
@@ -83,6 +86,7 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "16.1.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/byte-size": "^8.1.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
