--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.477.0",
     "mime-types": "^2.1.35",
+    "nanoid": "^5.1.3",
     "next": "~15.1.4",
     "next-themes": "^0.4.4",
     "passport": "^0.7.0",
@@ -62,7 +63,8 @@
     "rxjs": "^7.8.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
@@ -97,6 +99,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/uniqid": "^5.3.4",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
