--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/postcss": "^4.0.11",
     "@tanstack/react-table": "^8.21.2",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "byte-size": "^9.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -89,7 +89,6 @@
     "@swc-node/register": "~1.9.1",
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "16.1.0",
-    "@types/bcrypt": "^5.0.2",
     "@types/byte-size": "^8.1.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
