--- a/apps/frontend/project.json
+++ b/apps/frontend/project.json
@@ -1,30 +1,9 @@
 {
   "name": "frontend",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/frontend",
+  "sourceRoot": "apps/frontend/src",
   "projectType": "application",
   "tags": [],
   "// targets": "to see all targets run: nx show project frontend --web",
-  "targets": {
-    "serve": {
-      "executor": "@nx/next:server",
-      "defaultConfiguration": "development",
-      "options": {
-        "buildTarget": "frontend:build",
-        "dev": true
-      },
-      "configurations": {
-        "development": {
-          "buildTarget": "frontend:build:development",
-          "dev": true,
-          "port": 3000
-        },
-        "production": {
-          "buildTarget": "frontend:build:production",
-          "dev": false,
-          "port": 3000
-        }
-      }
-    }
-  }
+  "targets": {}
 }
