--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@fontsource/ubuntu": "^5.2.5",
     "@hookform/resolvers": "^4.1.3",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
@@ -18,7 +19,6 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^11.0.6",
-    "@nx/react": "^20.4.6",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -34,6 +34,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/postcss": "^4.0.11",
+    "@tanstack/react-router": "^1.114.17",
     "@tanstack/react-table": "^8.21.2",
     "bcryptjs": "^3.0.2",
     "byte-size": "^9.0.1",
@@ -83,11 +84,18 @@
     "@nx/nest": "20.4.6",
     "@nx/next": "20.4.6",
     "@nx/node": "20.4.6",
+    "@nx/react": "20.4.6",
+    "@nx/vite": "20.4.6",
     "@nx/web": "20.4.6",
     "@nx/webpack": "20.4.6",
     "@nx/workspace": "20.4.6",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
+    "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@tanstack/react-router-devtools": "^1.114.21",
+    "@tanstack/router-plugin": "^1.114.17",
+    "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
     "@types/byte-size": "^8.1.2",
     "@types/cookie-parser": "^1.4.8",
@@ -102,6 +110,9 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@types/uniqid": "^5.3.4",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
@@ -113,6 +124,7 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "~22.1.0",
     "nx": "20.4.6",
     "prettier": "^2.6.2",
     "prisma": "^6.4.1",
@@ -123,6 +135,8 @@
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.3.1",
     "webpack-cli": "^5.1.4"
   }
 }
