--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "nx": "20.4.6",
     "prettier": "^2.6.2",
     "prisma": "^6.4.1",
+    "release-it": "^18.1.2",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
