--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "telegram": "^2.26.22",
-    "uniqid": "^5.4.0"
+    "uniqid": "^5.4.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
