chore: update example env

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # internal
 AUTH_SECRET=9de94d9e1f2cd194bd16bd3a4086fd32
-DATABASE_URL=postgresql://xile-local:xile-local-pwd@drivebase-postgres.xile.orb.local:5432/xile-db-local?schema=public
+DATABASE_URL=postgresql://drivebase-local:drivebase-local-pwd@localhost/drivebase-db-local?schema=public
 
 # public
 VITE_PUBLIC_API_URL=http://localhost:8000/api
