--- a/.release-it.json
+++ b/.release-it.json
@@ -9,7 +9,8 @@
   },
   "plugins": {
     "@release-it/conventional-changelog": {
-      "preset": "angular"
+      "preset": "angular",
+      "infile": "CHANGELOG.md"
     }
   }
 }
