--- a/package.json
+++ b/package.json
@@ -52,6 +52,10 @@
     "framer-motion": "^12.4.10",
     "google-auth-library": "^9.15.1",
     "googleapis": "^146.0.0",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
+    "iso-639-1": "^3.1.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.477.0",
     "mime-types": "^2.1.35",
@@ -63,6 +67,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.1",
     "react-redux": "^9.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
