--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@tailwindcss/postcss": "^4.0.11",
     "@tanstack/react-router": "^1.114.17",
     "@tanstack/react-table": "^8.21.2",
+    "ai": "^4.1.64",
     "bcryptjs": "^3.0.2",
     "byte-size": "^9.0.1",
+    "chalk": "^5.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "class-variance-authority": "^0.7.1",
@@ -56,10 +58,13 @@
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
     "iso-639-1": "^3.1.5",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.477.0",
     "mime-types": "^2.1.35",
     "nanoid": "^5.1.3",
+    "ollama-ai-provider": "^1.2.0",
+    "openai": "^4.88.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -110,6 +115,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.12",
