--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ AUTH_SECRET=9de94d9e1f2cd194bd16bd3a4086fd32
 DATABASE_URL=postgresql://drivebase-local:drivebase-local-pwd@localhost/drivebase-db-local?schema=public
 
 # public
-VITE_PUBLIC_API_URL=http://localhost:8000/api
+VITE_PUBLIC_API_URL=http://localhost:8000
 VITE_PUBLIC_APP_URL=http://localhost:3000
 
 # App Config
