--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tanstack/react-router": "^1.114.17",
     "@tanstack/react-table": "^8.21.2",
     "ai": "^4.1.64",
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "byte-size": "^9.0.1",
     "chalk": "^5.4.1",
