--- a/package.json
+++ b/package.json
@@ -103,7 +103,9 @@
     "@types/react-dom": "^19.0.4",
     "@types/supertest": "^6.0.2",
     "@vitejs/plugin-react": "^4.3.4",
+    "ai": "^4.2.3",
     "autoprefixer": "^10.4.21",
+    "chalk": "^5.4.1",
     "concurrently": "^9.1.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
@@ -111,6 +113,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "ollama-ai-provider": "^1.2.0",
     "postcss": "^8.5.3",
     "prettier": "^3.4.2",
     "prisma": "^6.5.0",
