--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@release-it/conventional-changelog": "^10.0.0",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@tanstack/router-plugin": "^1.114.27",
@@ -119,6 +120,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.4.2",
     "prisma": "^6.5.0",
+    "release-it": "^18.1.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "swc-loader": "^0.2.6",
