--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drivebase",
-  "version": "0.0.1",
+  "version": "0.1.0-alpha.0",
   "description": "",
   "author": "",
   "private": true,
