--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "dev": "concurrently \"npm run api:dev\" \"npm run web:dev\"",
     "build": "concurrently \"npm run api:build\" \"npm run web:build\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/drivebase/test/jest-e2e.json",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:cov": "vitest run --coverage",
+    "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
+    "test:e2e": "vitest run --config ./vitest.config.e2e.ts",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
@@ -94,18 +94,18 @@
     "@nestjs/testing": "^11.0.1",
     "@release-it/conventional-changelog": "^10.0.0",
     "@swc/cli": "^0.6.0",
-    "@swc/core": "^1.10.7",
+    "@swc/core": "^1.11.13",
     "@tanstack/router-plugin": "^1.114.27",
     "@types/byte-size": "^8.1.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@types/supertest": "^6.0.2",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^3.0.9",
     "ai": "^4.2.3",
     "autoprefixer": "^10.4.21",
     "chalk": "^5.4.1",
@@ -115,7 +115,6 @@
     "eslint-plugin-prettier": "^5.2.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.0.0",
-    "jest": "^29.7.0",
     "ollama-ai-provider": "^1.2.0",
     "postcss": "^8.5.3",
     "prettier": "^3.4.2",
@@ -126,43 +125,12 @@
     "swc-loader": "^0.2.6",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "ts-jest": "^29.2.5",
-    "ts-loader": "^9.5.2",
-    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0",
+    "unplugin-swc": "^1.5.1",
     "vite": "^6.2.3",
-    "vite-tsconfig-paths": "^5.1.4"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": ".",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "./coverage",
-    "testEnvironment": "node",
-    "roots": [
-      "<rootDir>/libs/",
-      "<rootDir>/apps/"
-    ],
-    "moduleNameMapper": {
-      "^@drivebase/auth(|/.*)$": "<rootDir>/libs/auth/src/$1",
-      "^@drivebase/db(|/.*)$": "<rootDir>/libs/db/src/$1",
-      "^@drivebase/files(|/.*)$": "<rootDir>/libs/files/src/$1",
-      "^@drivebase/providers(|/.*)$": "<rootDir>/libs/providers/src/$1",
-      "^@drivebase/shared(|/.*)$": "<rootDir>/libs/shared/src/$1",
-      "^@drivebase/users(|/.*)$": "<rootDir>/libs/users/src/$1",
-      "^@drivebase/workspaces(|/.*)$": "<rootDir>/libs/workspaces/src/$1"
-    }
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.9"
   }
 }
