chore(tsconfig): update types to include Vitest globals
- Modified `tsconfig.json` to add "vitest/globals" to the types array, enabling global access to Vitest testing functions.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
-    "types": ["node", "multer"],
+    "types": ["node", "multer", "vitest/globals"],
     "jsx": "react-jsx",
     "paths": {
       "@drivebase/web/*": ["web/*"],
