--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "i18next-http-backend": "^3.0.2",
     "iso-639-1": "^3.1.5",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.483.0",
     "nanoid": "^5.1.5",
     "passport-jwt": "^4.0.1",
