--- a/package.json
+++ b/package.json
@@ -20,22 +20,26 @@
     "test:cov": "vitest run --coverage",
     "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
     "test:e2e": "vitest run --config ./vitest.config.e2e.ts",
-    "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev",
-    "db:push": "prisma db push",
-    "db:studio": "BROWSER=null prisma studio",
-    "db:squash": "node scripts/manage-migrations.mjs squash",
-    "db:validate": "node scripts/manage-migrations.mjs validate"
+    "typeorm": "typeorm-ts-node-esm",
+    "migration:generate": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate -d ./typeorm.config.ts ./migrations/migration",
+    "migration:create": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:create -d ./typeorm.config.ts ./migrations/migration",
+    "migration:run": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d ./typeorm.config.ts",
+    "migration:revert": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:revert -d ./typeorm.config.ts"
   },
   "dependencies": {
+    "@apollo/server": "^4.11.3",
     "@aws-sdk/client-s3": "^3.772.0",
     "@hookform/resolvers": "^4.1.3",
+    "@nestjs/apollo": "^13.0.4",
     "@nestjs/common": "^10.4.15",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.4.15",
+    "@nestjs/graphql": "^13.0.4",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/swagger": "^11.1.0",
+    "@nestjs/typeorm": "^11.0.0",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -65,6 +69,7 @@
     "framer-motion": "^12.5.0",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
+    "graphql": "^16.10.0",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
@@ -75,6 +80,7 @@
     "nanoid": "^5.1.5",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -85,6 +91,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "telegram": "^2.26.22",
+    "typeorm": "^0.3.21",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -126,7 +133,10 @@
     "swc-loader": "^0.2.6",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.19.3",
+    "typeorm-ts-node-esm": "^0.3.20",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0",
     "unplugin-swc": "^1.5.1",
