chore(tsconfig): add baseUrl and paths for module resolution in TypeScript configuration

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -20,7 +20,14 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "@drivebase/web/*": ["*"],
+      "@drivebase/sdk": ["../sdk/index.ts"],
+      "@drivebase/sdk/*": ["../sdk/*"]
+    }
   },
   "extends": "../tsconfig.json"
 }
