--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/swagger": "^11.1.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@prisma/client": "6.5.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "byte-size": "^9.0.1",
@@ -99,6 +100,7 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
+    "nx": "^20.7.0",
     "ollama-ai-provider": "^1.2.0",
     "postcss": "^8.5.3",
     "prettier": "^3.4.2",
