chore: add @release-it/bumper package and configure output for docker-compose.yaml

--- a/.release-it.json
+++ b/.release-it.json
@@ -11,6 +11,9 @@
     "@release-it/conventional-changelog": {
       "preset": "angular",
       "infile": "CHANGELOG.md"
+    },
+    "@release-it/bumper": {
+      "out": ["docker-compose.yaml"]
     }
   }
 }
