--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@parcel/watcher": "^2.5.1",
+    "@release-it/bumper": "^7.0.2",
     "@release-it/conventional-changelog": "^10.0.0",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.11.13",
