chore(docker-compose): update drivebase image to latest version and specify version in configuration

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,8 @@
+version: '3'
+
 services:
   drivebase:
-    image: ghcr.io/drivebase/drivebase:v1.0.0-alpha.13
+    image: ghcr.io/drivebase/drivebase:latest
     container_name: drivebase
     restart: always
     ports:
