feat(ftp): add FTP storage provider integration and update documentation

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,7 @@
 		"@drivebase/core": "workspace:*",
 		"@drivebase/db": "workspace:*",
 		"@drivebase/dropbox": "workspace:*",
+		"@drivebase/ftp": "workspace:*",
 		"@drivebase/google-drive": "workspace:*",
 		"@drivebase/local": "workspace:*",
 		"@drivebase/s3": "workspace:*",
