chore: update Docker image version in production compose file and adjust release-it configuration

--- a/.release-it.json
+++ b/.release-it.json
@@ -14,7 +14,7 @@
     },
     "@release-it/bumper": {
       "out": [
-        "README.md",
+        "docker/compose.prod.yaml",
         "apps/www/components/landing/hero.tsx"
       ]
     }
