chore: update release-it configuration to specify file type for docker compose

--- a/.release-it.json
+++ b/.release-it.json
@@ -14,7 +14,10 @@
     },
     "@release-it/bumper": {
       "out": [
-        "docker/compose.prod.yaml",
+        {
+          "file": "docker/compose.prod.yaml",
+          "type": "text/plain"
+        },
         "apps/www/components/landing/hero.tsx"
       ]
     }
