feat(provider): add Telegram storage provider

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,7 +21,9 @@
 		"@drivebase/google-drive": "workspace:*",
 		"@drivebase/local": "workspace:*",
 		"@drivebase/s3": "workspace:*",
+		"@drivebase/telegram": "workspace:*",
 		"@drivebase/webdav": "workspace:*",
+		"telegram": "^2.26.22",
 		"@graphql-tools/graphql-file-loader": "^8.0.5",
 		"@graphql-tools/load": "^8.0.5",
 		"@graphql-tools/schema": "^10.0.31",
